--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.4.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
